Apply autoupgrade of SpringBoot