@@ -1,4 +1,5 @@
 package de.uni_koeln.arachne.controller;
+
 import com.fasterxml.jackson.core.JsonFactory;
 import com.fasterxml.jackson.core.JsonGenerator;
 import de.uni_koeln.arachne.dao.jdbc.BookDao;
@@ -14,21 +15,20 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.ResponseBody;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.StringWriter;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.Optional;
 
 import static de.uni_koeln.arachne.util.network.CustomMediaType.APPLICATION_JSON_UTF8_VALUE;
-
 
 /**
  * @author: Daniel de Oliveira
@@ -51,30 +51,32 @@ public class BookController {
     private class TEIException extends Exception {
         private static final long serialVersionUID = 1L;
 
-		public TEIException(String message) {
-            super("TEI not well-formed: "+message);
+        public TEIException(String message) {
+            super("TEI not well-formed: " + message);
         }
     }
 
-
-    private File teiFile(String bookId){ return new File(booksPath+bookId+"/transcription.xml"); }
+    private File teiFile(String bookId) {
+        return new File(booksPath + bookId + "/transcription.xml");
+    }
 
     /**
      * Returns the EntityID for a given alias (to realise permalinks)
      *
-     * @param alias the alternative name of the book
-     * @param prefix optional prefix to allow aliases with slashes (e.g. "archive/...")
+     * @param alias  the alternative name of the book
+     * @param prefix optional prefix to allow aliases with slashes (e.g.
+     *               "archive/...")
      * @return the arachne entity id if book is present. null if not
      */
-    @RequestMapping(value={"/books/{alias}", "/books/{prefix}/{alias}"},
-            method=RequestMethod.GET,
-            produces = {APPLICATION_JSON_UTF8_VALUE})
+    @GetMapping(value = { "/books/{alias}", "/books/{prefix}/{alias}" }, produces = { APPLICATION_JSON_UTF8_VALUE })
     public @ResponseBody ResponseEntity<String> handleGetAliasRequest(
-            @PathVariable("alias") String alias,
-            @PathVariable("prefix") Optional<String> prefix) {
+            @PathVariable String alias,
+            @PathVariable Optional<String> prefix) {
 
-        if (booksPath==null) throw new IllegalStateException("bookPath must not be null");
-        if (bookDao==null)   throw new IllegalStateException("bookDao must not be null");
+        if (booksPath == null)
+            throw new IllegalStateException("bookPath must not be null");
+        if (bookDao == null)
+            throw new IllegalStateException("bookDao must not be null");
 
         if (prefix.isPresent()) {
             alias = prefix.get() + "/" + alias;
@@ -90,49 +92,50 @@ public class BookController {
      * Takes the TEI xml file at booksPath/{bookId}/transcription.xml
      * and renders selected information to a json format which is exemplified by:
      * {
-     *     pages : [
-     *       {
-     *           img_file : "img_file_url"
-     *       }, ...
-     *     ]
+     * pages : [
+     * {
+     * img_file : "img_file_url"
+     * }, ...
+     * ]
      * }
      *
      * @param arachneEntityId The entity id of the book.
-     * @return A {@link ResponseEntity} containing the JSON response or an error status code on failure:</br>
-     * 404 if TEI document for bookId is not found</br>
-     * 200 if json could be created successfully</br>
-     * 500 if an error occurred during the xml to json transformation
+     * @return A {@link ResponseEntity} containing the JSON response or an error
+     *         status code on failure:</br>
+     *         404 if TEI document for bookId is not found</br>
+     *         200 if json could be created successfully</br>
+     *         500 if an error occurred during the xml to json transformation
      */
-    @RequestMapping(value="/book/{arachneEntityId}",
-            method=RequestMethod.GET,
-            produces = {APPLICATION_JSON_UTF8_VALUE})
+    @GetMapping(value = "/book/{arachneEntityId}", produces = { APPLICATION_JSON_UTF8_VALUE })
     public @ResponseBody ResponseEntity<String> handleGetEntityIdRequest(
-            @PathVariable("arachneEntityId") final String arachneEntityId) {
+            @PathVariable final String arachneEntityId) {
 
-        if (booksPath==null) throw new IllegalStateException("bookPath must not be null");
-        if (bookDao==null)   throw new IllegalStateException("bookDao must not be null");
+        if (booksPath == null)
+            throw new IllegalStateException("bookPath must not be null");
+        if (bookDao == null)
+            throw new IllegalStateException("bookDao must not be null");
 
-
-        String teiFolderName=bookDao.getTEIFolderName(arachneEntityId);
-        if (teiFolderName==null){
-            LOGGER.error("bookId could not be determined for arachneEntityId: "+arachneEntityId);
+        String teiFolderName = bookDao.getTEIFolderName(arachneEntityId);
+        if (teiFolderName == null) {
+            LOGGER.error("bookId could not be determined for arachneEntityId: " + arachneEntityId);
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body(RESPONSE_MSG_NOT_FOUND);
         }
 
-        if (!teiFile(teiFolderName).exists()){
-            LOGGER.error("File not found: "+teiFile(teiFolderName));
+        if (!teiFile(teiFolderName).exists()) {
+            LOGGER.error("File not found: " + teiFile(teiFolderName));
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body(RESPONSE_MSG_NOT_FOUND);
         }
 
         try {
             return ResponseEntity.status(HttpStatus.OK).body(buildJsonFromTeiTranscript(teiFile(teiFolderName)));
-        } catch (Exception e){
-            LOGGER.error("An error occured while parsing "+teiFile(teiFolderName)+" -> "+e.getClass() + ":" + e.getMessage());
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(RESPONSE_MSG_NOT_FOUND) ;
+        } catch (Exception e) {
+            LOGGER.error("An error occured while parsing " + teiFile(teiFolderName) + " -> " + e.getClass() + ":"
+                    + e.getMessage());
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(RESPONSE_MSG_NOT_FOUND);
         }
     }
 
-    @RequestMapping(value="/book/{}")
+    @RequestMapping(value = "/book/{}")
 
     /**
      * @param xmlFile
@@ -145,10 +148,10 @@ public class BookController {
 
         SAXBuilder builder = new SAXBuilder();
 
-        Element facsimileNode=null;
+        Element facsimileNode = null;
         try {
             facsimileNode = ((Document) builder.build(xmlFile)).getRootElement().getChildren().get(1);
-        } catch (IndexOutOfBoundsException iex){
+        } catch (IndexOutOfBoundsException iex) {
             throw new TEIException("Missing header element.");
         }
 
@@ -167,18 +170,18 @@ public class BookController {
             throws IOException {
 
         @SuppressWarnings("resource")
-		StringWriter sw = new StringWriter();
+        StringWriter sw = new StringWriter();
         @SuppressWarnings("resource")
-		JsonGenerator jsonGenerator = new JsonFactory().createGenerator(sw);
+        JsonGenerator jsonGenerator = new JsonFactory().createGenerator(sw);
 
         jsonGenerator.writeStartObject();
         jsonGenerator.writeFieldName("pages");
         jsonGenerator.writeStartArray();
 
-        for (Object surfaceEl : listOfSurfaceElements){
+        for (Object surfaceEl : listOfSurfaceElements) {
 
             jsonGenerator.writeStartObject();
-            jsonGenerator.writeStringField("img_file",img_filePrefix+"/"+
+            jsonGenerator.writeStringField("img_file", img_filePrefix + "/" +
                     ((Element) surfaceEl).getChildren().get(0).getAttributeValue("url"));
             jsonGenerator.writeEndObject();
         }
@@ -187,7 +190,6 @@ public class BookController {
         jsonGenerator.writeEndObject();
         jsonGenerator.close();
 
-
         String result = sw.toString();
         sw.close();
         return result;
@@ -195,21 +197,25 @@ public class BookController {
 
     /**
      * Sets a books path.
+     * 
      * @param booksPath path to the folder where the TEI files are stored
      */
     @Value("${booksPath}")
-    public void setBooksPath(String booksPath){
-        if (!Files.exists(Paths.get(booksPath))) throw new IllegalArgumentException("Must exist: "+booksPath);
+    public void setBooksPath(String booksPath) {
+        if (!Files.exists(Path.of(booksPath)))
+            throw new IllegalArgumentException("Must exist: " + booksPath);
 
         this.booksPath = booksPath;
-        if (!booksPath.endsWith("/")) this.booksPath+="/";
+        if (!booksPath.endsWith("/"))
+            this.booksPath += "/";
     }
 
     /**
      * Sets the data access object for books.
+     * 
      * @param bookDao The data access object.
      */
-    public void setBookDao(BookDao bookDao){
+    public void setBookDao(BookDao bookDao) {
         this.bookDao = bookDao;
     }
 }
