@@ -2,7 +2,7 @@ package de.uni_koeln.arachne.service;
 
 import java.util.List;
 
-import javax.annotation.PreDestroy;
+import jakarta.annotation.PreDestroy;
 import javax.sql.DataSource;
 
 import org.elasticsearch.action.bulk.BulkProcessor;
@@ -16,6 +16,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.sql.init.dependency.DependsOnDatabaseInitialization;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.scheduling.annotation.Async;
@@ -28,15 +29,21 @@ import com.google.common.base.Throwables;
 import de.uni_koeln.arachne.mapping.hibernate.ArachneEntity;
 import de.uni_koeln.arachne.util.EntityId;
 import de.uni_koeln.arachne.util.network.BasicNetwork;
+
 //import de.uni_koeln.arachne.util.system.ExternalProcess;
 
 /**
- * This class implements the dataimport into elastic search. It is realized as a <code>@Service</code> so it can make
- * use of autowiring and be autowired itself (for communication). At the same time it implements the
- * <code>ApplicationListener</code>-Interface to receive the <code>ContextClosed</code> so that the <code>TaskExecutor</code>
- * and <code>TaskScheduler</code> which are use to run the <code>startImport()</code> method asynchronously can be shut
+ * This class implements the dataimport into elastic search. It is realized as a
+ * <code>@Service</code> so it can make
+ * use of autowiring and be autowired itself (for communication). At the same
+ * time it implements the
+ * <code>ApplicationListener</code>-Interface to receive the
+ * <code>ContextClosed</code> so that the <code>TaskExecutor</code>
+ * and <code>TaskScheduler</code> which are use to run the
+ * <code>startImport()</code> method asynchronously can be shut
  *
  */
+@DependsOnDatabaseInitialization
 @Service("DataImportService")
 public class DataImportService { // NOPMD
 	private static final Logger LOGGER = LoggerFactory.getLogger(DataImportService.class);
@@ -77,6 +84,7 @@ public class DataImportService { // NOPMD
 
 	/**
 	 * Through this function the datasource is injected.
+	 * 
 	 * @param dataSource An SQL Datasource.
 	 */
 	@Autowired
@@ -96,10 +104,9 @@ public class DataImportService { // NOPMD
 	private transient double averageDPS = 100;
 	private transient double smoothingFactor = 0.005d;
 
-	@Autowired
-	public DataImportService(final @Value("${profilingDataimport}") boolean profiling
-			, final @Value("${checkIndexOnDataImport}") boolean checkIndexOnDataImport
-			, final @Value("${esBulkActions}") int esBulkActions) {
+	public DataImportService(final @Value("${profilingDataimport}") boolean profiling,
+			final @Value("${checkIndexOnDataImport}") boolean checkIndexOnDataImport,
+			final @Value("${esBulkActions}") int esBulkActions) {
 
 		this.PROFILING = profiling;
 		this.checkIndexOnDataImport = checkIndexOnDataImport;
@@ -107,16 +114,18 @@ public class DataImportService { // NOPMD
 	}
 
 	/**
-	 * The dataimport implementation. This method retrieves a list of EntityIds from the DB and iterates over this list
+	 * The dataimport implementation. This method retrieves a list of EntityIds from
+	 * the DB and iterates over this list
 	 * constructing the associated documents and indexing them via elasticsearch.
 	 */
 	@Async
 	public void start() {
-		// request scope hack (enabling session scope) - needed so the UserRightsService can be used
+		// request scope hack (enabling session scope) - needed so the UserRightsService
+		// can be used
 		RequestContextHolder.setRequestAttributes(new ServletRequestAttributes(new MockHttpServletRequest()));
 
 		// run scripts
-		//createSemanticConnectionTable();
+		// createSemanticConnectionTable();
 
 		terminate = false;
 		running = true;
@@ -148,21 +157,21 @@ public class DataImportService { // NOPMD
 
 				@Override
 				public void beforeBulk(long executionId, BulkRequest request) {
-					LOGGER.debug(String.format("ExecutionID %s: about to execute new bulk insert composed of %s actions."
-							, executionId, request.numberOfActions()));
+					LOGGER.debug("ExecutionID %s: about to execute new bulk insert composed of %s actions."
+							.formatted(executionId, request.numberOfActions()));
 					openRequests++;
 				}
 
 				@Override
 				public void afterBulk(long executionId, BulkRequest request, BulkResponse response) {
-					LOGGER.info(String.format("ExecutionID %s: bulk insert composed of %s actions completed in %s ms"
-							, executionId, request.numberOfActions(), response.getTook().millis()));
+					LOGGER.info("ExecutionID %s: bulk insert composed of %s actions completed in %s ms"
+							.formatted(executionId, request.numberOfActions(), response.getTook().millis()));
 					openRequests--;
 				}
 
 				@Override
 				public void afterBulk(long executionId, BulkRequest request, Throwable failure) {
-					LOGGER.error(String.format("Error executing bulk %s", executionId), failure);
+					LOGGER.error("Error executing bulk %s".formatted(executionId), failure);
 					openRequests--;
 					error = true;
 				}
@@ -187,24 +196,27 @@ public class DataImportService { // NOPMD
 			LOGGER.info("Dataimport started on index '" + indexName + "'");
 			esService.setRefreshInterval(indexName, false);
 
-			final Long entityCount = jdbcTemplate.queryForObject("select count(*) `ArachneEntityID` from `arachneentityidentification` where `isDeleted` = 0", Long.class);
+			final Long entityCount = jdbcTemplate.queryForObject(
+					"select count(*) `ArachneEntityID` from `arachneentityidentification` where `isDeleted` = 0",
+					Long.class);
 			if (entityCount != null) {
 				count = entityCount;
 			} else {
-				LOGGER.error("'select count(*) `ArachneEntityID` from `arachneentityidentification` where `isDeleted` = 0' returned 0 - Dataimport aborted.");
+				LOGGER.error(
+						"'select count(*) `ArachneEntityID` from `arachneentityidentification` where `isDeleted` = 0' returned 0 - Dataimport aborted.");
 				bulkProcessor.close();
-				throw new Exception("'select count(*) `ArachneEntityID` from `arachneentityidentification` where `isDeleted` = 0' returned 0");
+				throw new Exception(
+						"'select count(*) `ArachneEntityID` from `arachneentityidentification` where `isDeleted` = 0' returned 0");
 			}
 
 			long startId = 0;
 			long lastDocuments = 0;
 			List<ArachneEntity> entityIds;
-			dataimport:
-			do {
+			dataimport: do {
 				LOGGER.info("Fetching " + ID_LIMIT + " EntityIds [" + startId + "] ...");
 				entityIds = entityIdentificationService.getByLimitedEntityIdRange(startId, ID_LIMIT);
 
-				for (final ArachneEntity currentEntityId: entityIds) {
+				for (final ArachneEntity currentEntityId : entityIds) {
 					startId = currentEntityId.getEntityId();
 
 					if (terminate) {
@@ -212,7 +224,7 @@ public class DataImportService { // NOPMD
 						break dataimport;
 					}
 
-					//final EntityId entityId = entityIdentificationService.getId(currentEntityId);
+					// final EntityId entityId = entityIdentificationService.getId(currentEntityId);
 					final EntityId entityId = new EntityId(currentEntityId);
 					dbgEntityId = entityId.getArachneEntityID();
 
@@ -229,7 +241,8 @@ public class DataImportService { // NOPMD
 							i++;
 						} while (jsonEntity == null && i < maxRetries);
 						if (jsonEntity == null) {
-							LOGGER.error("Entity " + dbgEntityId + " is null! This should never happen. Check the database immediately.");
+							LOGGER.error("Entity " + dbgEntityId
+									+ " is null! This should never happen. Check the database immediately.");
 							bulkProcessor.close();
 							throw new RuntimeException("Entity " + dbgEntityId + " is null!");
 						} else {
@@ -251,7 +264,7 @@ public class DataImportService { // NOPMD
 						deltaT = now;
 						elapsedTime = now - startTime;
 
-						lastDPS = (double)(index - lastDocuments) / lastStep * 1000d;
+						lastDPS = (double) (index - lastDocuments) / lastStep * 1000d;
 						lastDocuments = index;
 						calculateAverageDPSAndETR();
 					}
@@ -259,7 +272,8 @@ public class DataImportService { // NOPMD
 			} while (!entityIds.isEmpty());
 			bulkProcessor.close();
 			if (running) {
-				// wait a little bit to let the bulk request finish as bulkprocessoor.close() is non-blocking
+				// wait a little bit to let the bulk request finish as bulkprocessoor.close() is
+				// non-blocking
 				int retries = 0;
 				while (listener.getOpenRequests() > 0 && !listener.hasFailed() && retries < 60) {
 					Thread.sleep(1000);
@@ -272,23 +286,27 @@ public class DataImportService { // NOPMD
 				esService.setRefreshInterval(indexName, true);
 				esService.updateSearchIndex();
 				final long elapsedTime = (System.currentTimeMillis() - startTime);
-				final String success = "Import of " + index + " documents finished in " + elapsedTime/1000f/60f/60f + " hours ("
-						+ index/((float)elapsedTime/1000) + " documents per second)." + System.lineSeparator()
+				final String success = "Import of " + index + " documents finished in "
+						+ elapsedTime / 1000f / 60f / 60f + " hours ("
+						+ index / ((float) elapsedTime / 1000) + " documents per second)." + System.lineSeparator()
 						+ System.lineSeparator() + dataIntegrityLogService.getSummary();
 				LOGGER.info(success);
-				mailService.sendMail("idai.objects-status@dainst.de", "Dataimport(" + BasicNetwork.getHostName() + ") - success", success);
+				mailService.sendMail("idai.objects-status@dainst.de",
+						"Dataimport(" + BasicNetwork.getHostName() + ") - success", success);
 				contextService.clearCache();
 			} else {
 				LOGGER.info("Dataimport aborted.");
 				esService.deleteIndex(indexName);
-				mailService.sendMail("idai.objects-status@dainst.de", "Dataimport(" + BasicNetwork.getHostName() + ") - abort", "Dataimport was manually aborted.");
+				mailService.sendMail("idai.objects-status@dainst.de",
+						"Dataimport(" + BasicNetwork.getHostName() + ") - abort", "Dataimport was manually aborted.");
 			}
 		} catch (Exception e) {
 			final String failure = "Dataimport failed at [" + dbgEntityId + "] with: ";
 			LOGGER.error(failure, e);
 			final String stacktrace = Throwables.getStackTraceAsString(e);
-			mailService.sendMail("idai.objects-status@dainst.de", "Dataimport(" + BasicNetwork.getHostName() + ") - failure"
-					, failure + e.toString() + System.getProperty("line.separator") + "StackTrace: " + stacktrace);
+			mailService.sendMail("idai.objects-status@dainst.de",
+					"Dataimport(" + BasicNetwork.getHostName() + ") - failure",
+					failure + e.toString() + System.getProperty("line.separator") + "StackTrace: " + stacktrace);
 			esService.deleteIndex(indexName);
 		}
 		// disable request scope hack
@@ -298,20 +316,22 @@ public class DataImportService { // NOPMD
 	}
 
 	// re-enable when appropriate
-	/*private void createSemanticConnectionTable() {
-		String relativePath = "/WEB-INF/scripts/FillEntityConnectionTable.php";
-		String absolutePath = servletContext.getRealPath(relativePath);
-		ExternalProcess.runBlocking(new String[] {"php", absolutePath});
-	}*/
+	/*
+	 * private void createSemanticConnectionTable() {
+	 * String relativePath = "/WEB-INF/scripts/FillEntityConnectionTable.php";
+	 * String absolutePath = servletContext.getRealPath(relativePath);
+	 * ExternalProcess.runBlocking(new String[] {"php", absolutePath});
+	 * }
+	 */
 
 	private float calculateAverageDPSAndETR() {
 		if (running && elapsedTime > 0 && indexedDocuments > 0) {
 			averageDPS = smoothingFactor * lastDPS + (1 - smoothingFactor) * averageDPS;
-			etr = (long)((double)(count - indexedDocuments) / averageDPS);
+			etr = (long) ((double) (count - indexedDocuments) / averageDPS);
 			if (PROFILING) {
 				LOGGER_PROF.info(indexedDocuments + " - " + averageDPS);
 			}
-			return (float)averageDPS;
+			return (float) averageDPS;
 		}
 		return 0.0f;
 	}
